Stop tabs jumping

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -73,7 +73,7 @@ li.nav-item {
     }
 
     a.nav-link.active {
-        padding: .5rem 1rem
+        //padding: .5rem 1rem
     }
 }
 
